[gd_scene load_steps=2 format=3 uid="uid://dhqcdwpxul6uo"]

[ext_resource type="Script" uid="uid://d3ickkox8vwuo" path="res://Scripts/UI/MainMenu.gd" id="1_les83"]

[node name="MainMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_les83")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0.45098, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="New Scene" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "New Scene"

[node name="RecentScenes" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Confirm delete"
initial_position = 2
dialog_text = "Deleting map "

[connection signal="pressed" from="VBoxContainer/New Scene" to="." method="on_new_scene"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="delete_scene_confirmed"]
